--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" dir="rtl">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>فروشگاه اینترنتی دسترسی</title>
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     <link rel="shortcut icon" href="./img/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     link
@@ -518,7 +521,7 @@
 <!-- #endregion project-->
 
 
-<script src="./node_modules/swiper/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     var swiper = new Swiper(".mySwiper", {
       pagination: {
@@ -548,7 +551,7 @@
     },
    
   });
-</script>
+</>
 <script>
     var swiper2 = new Swiper(".mySwiper2", {
       slidesPerView: 4,
